Cookies fix on mobile

--- a/src/style/App.less
+++ b/src/style/App.less
@@ -875,7 +875,10 @@ form {
     right: 50%;
     margin-right: -118px;
   }
-  #overlay #popup { display: block; .btn { margin-left: auto; } }
+  #overlay #popup {
+    display: block;
+    .btn { margin: 20px auto; } 
+  }
   #header {
     #wideNav { display: none; }
     #mobile {
@@ -958,8 +961,8 @@ form {
        width: ~"calc(100% - 16%)";
      }
    }
- }
- #phasesBlock {
+  }
+  #phasesBlock {
     padding-top: 30px;
     h4 { display: none; }
     #tabcontent {
